crates/next-custom-transforms/tests/errors/server-actions/server-graph/19/output.js
export async function fn() {
    console.log('foo');
    'use cache';
}
